# SpaceGame

./: .gitignore  CMakeLists.txt  SpaceGame.pro  object_script.SpaceGame.Debug  object_script.SpaceGame.Release  spacegame.ui
src/: blasterbolt.cpp  blasterbolt.h  defines.h  enemyone.cpp  enemyone.h  game.cpp  game.h  gameobject.cpp  gameobject.h  level.cpp  level.h  main.cpp  mainmenu.cpp  mainmenu.h  ship.cpp  ship.h  spacegame.cpp  spacegame.h  timing.cpp  timing.h
